--- a/Marcas/Reports/last_round_avg_bet.xml
+++ b/Marcas/Reports/last_round_avg_bet.xml
@@ -1,53 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Resultados>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
+    <ID-Game>1</ID-Game>
+    <Average-Bet-Of-Last-Round>7.67</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
+    <ID-Game>2</ID-Game>
+    <Average-Bet-Of-Last-Round>6.00</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
+    <ID-Game>3</ID-Game>
+    <Average-Bet-Of-Last-Round>5.50</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
+    <ID-Game>4</ID-Game>
+    <Average-Bet-Of-Last-Round>4.00</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Rounds>PlaceHolder</Rounds>
-    <Average-Bet>PlaceHolder</Average-Bet>
+    <ID-Game>5</ID-Game>
+    <Average-Bet-Of-Last-Round>2.50</Average-Bet-Of-Last-Round>
   </Fila>
 </Resultados>
