--- a/Marcas/Reports/won_game_bots.xml
+++ b/Marcas/Reports/won_game_bots.xml
@@ -1,43 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Resultados>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
+    <ID-Game>1</ID-Game>
+    <Rounds-Won>17</Rounds-Won>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
+    <ID-Game>3</ID-Game>
+    <Rounds-Won>21</Rounds-Won>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
+    <ID-Game>4</ID-Game>
+    <Rounds-Won>20</Rounds-Won>
   </Fila>
   <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
-  </Fila>
-  <Fila>
-    <ID-Game>PlaceHolder</ID-Game>
-    <Won-Rounds>PlaceHolder</Won-Rounds>
+    <ID-Game>5</ID-Game>
+    <Rounds-Won>8</Rounds-Won>
   </Fila>
 </Resultados>
