conexión a BBDD hecha; y muchas otras cosas

--- a/Marcas/Reports/bank_players.xml
+++ b/Marcas/Reports/bank_players.xml
@@ -20,4 +20,8 @@
     <ID-Game>5</ID-Game>
     <Users-who-have-been-bank>1</Users-who-have-been-bank>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <Users-who-have-been-bank>1</Users-who-have-been-bank>
+  </Fila>
 </Resultados>
