--- a/Marcas/Reports/bank_wins_distinguish_user.xml
+++ b/Marcas/Reports/bank_wins_distinguish_user.xml
@@ -55,4 +55,9 @@
     <ID-Player>33337777C</ID-Player>
     <Rounds-Won>1</Rounds-Won>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>86026754S</ID-Player>
+    <Rounds-Won>3</Rounds-Won>
+  </Fila>
 </Resultados>
