--- a/Marcas/Reports/bot_game_wins.xml
+++ b/Marcas/Reports/bot_game_wins.xml
@@ -16,4 +16,8 @@
     <ID-Game>5</ID-Game>
     <Points-Earned-by-Winning-Bot>8</Points-Earned-by-Winning-Bot>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <Points-Earned-by-Winning-Bot>29</Points-Earned-by-Winning-Bot>
+  </Fila>
 </Resultados>
