--- a/Marcas/Reports/first_round_avg_bet.xml
+++ b/Marcas/Reports/first_round_avg_bet.xml
@@ -20,4 +20,8 @@
     <ID-Game>5</ID-Game>
     <Average-Bet-Of-First-Round>4.00</Average-Bet-Of-First-Round>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <Average-Bet-Of-First-Round>12.50</Average-Bet-Of-First-Round>
+  </Fila>
 </Resultados>
