--- a/Marcas/Reports/game_avg_bet.xml
+++ b/Marcas/Reports/game_avg_bet.xml
@@ -20,4 +20,8 @@
     <ID-Game>5</ID-Game>
     <Average-Bet>3.333</Average-Bet>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <Average-Bet>8.900</Average-Bet>
+  </Fila>
 </Resultados>
