--- a/Marcas/Reports/last_round_avg_bet.xml
+++ b/Marcas/Reports/last_round_avg_bet.xml
@@ -20,4 +20,8 @@
     <ID-Game>5</ID-Game>
     <Average-Bet-Of-Last-Round>2.50</Average-Bet-Of-Last-Round>
   </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <Average-Bet-Of-Last-Round>11.50</Average-Bet-Of-Last-Round>
+  </Fila>
 </Resultados>
