--- a/Marcas/base.css
+++ b/Marcas/base.css
@@ -11,6 +11,8 @@
 body {
     font-family: "Roboto", serif;
     background: linear-gradient(to bottom, #535553, #d6dcd7);
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -82,6 +84,40 @@ main {
     min-width: 650px;
     margin-inline: auto;
     padding: 12px;
+}
+
+h2 {
+    font-size: 48px;
+    font-weight: 800;
+    margin-inline: auto;
+    margin-bottom: 12px;
+}
+
+h3 {
+    font-size: 32px;
+    font-weight: 700;
+    margin-inline: auto;
+    margin-block: 12px;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(to top, #aeaeae, #dedede);
+    padding: 24px 12px;
+    border: 1px solid rgb(46, 44, 44);
+    border-radius: 8px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+p {
+    font-size: 24px;
+    margin-bottom: 12px;
+    text-wrap: pretty;
+}
+
+.small-font {
+    font-size: 16px;
 }
 
 footer {
