--- a/Marcas/equip.css
+++ b/Marcas/equip.css
@@ -8,8 +8,10 @@ section {
 }
 
 section > ul {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     margin-inline: 48px;
+    margin-top: 16px;
     justify-content: center;
 }
 
@@ -18,7 +20,7 @@ section > ul > li {
 }
 
 section > ul > li > ul {
-    margin-inline: 16px;
+    margin-inline: 24px;
 }
 
 section > ul > li,  section > ul > li > ul > li{
@@ -27,12 +29,12 @@ section > ul > li,  section > ul > li > ul > li{
     flex-direction: column;
 }
 
-figure {
+section > ul > li > figure {
     display: flex;
     flex-direction: column;
 }
 
-img {
+section > ul > li > figure > img {
     width: 256px;
     border-radius: 50%;
     border: 8px solid rgb(19, 18, 18);
@@ -40,6 +42,7 @@ img {
 }
 
 figure > p {
+    margin-top: 16px;
     margin-inline: auto;
 }
 
