--- a/Marcas/base.css
+++ b/Marcas/base.css
@@ -31,6 +31,7 @@ header {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     position: sticky;
     top:0px;
+    z-index: 10;
 }
 
 #title-div {
@@ -41,11 +42,11 @@ header {
 }
 
 #title-div > figure >img {
-    width: 128px;
+    width: 96px;
 }
 
 #title-div > h1 {
-    font-size: 64px;
+    font-size: 56px;
     font-weight: 900;
     letter-spacing: 2px;
 }
